--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-moralis": "^1.4.2"
+    "react-moralis": "^1.4.2",
+    "web3uikit": "^0.1.159"
   },
   "devDependencies": {
     "@types/node": "^20",
